--- a/scss/sections/__footer.scss
+++ b/scss/sections/__footer.scss
@@ -84,6 +84,10 @@
                 font-family: 'hoghfish';
                 font-size: 35px;
                 margin-top: -4px;
+
+                @media screen and (max-width: 400px){
+                    margin-top: 6px;
+                }
             }
         }
     }
